<resources>
    <string name="app_name">Home</string>
    <string name="explorer_title">Explorer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blm_campaign">black lives matter!</string>
    <string name="black_lives_matter">Black Lives Matter</string>
    <string name="search_hint">Senior Project Manager, London</string>
    <string name="help_friends_get_paid">Help friends and get paid</string>
    <string name="next">next</string>
    <string name="home">Home</string>
    <string name="explorer">Explorer</string>
    <string name="net_of_nets">Net of Nets</string>
    <string name="activity">Activity</string>
    <string name="post_a_job">Post a Job</string>
</resources>