<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/explorer_title"
            android:textColor="@color/primary_green"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/notifications"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintRight_toLeftOf="@id/menu_icon"
            app:layout_constraintTop_toTopOf="@id/title" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_search_bg"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/search_hint"
            android:padding="16dp"
            android:textColor="@color/input_grey"
            android:textColorHint="@color/input_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_x"
            app:layout_constraintBottom_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toEndOf="@id/search_bar"
            app:layout_constraintTop_toTopOf="@id/search_bar" />


        <ImageView
            android:id="@+id/find_jobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/find_jobs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar" />

        <ImageView
            android:id="@+id/help_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/help_others"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar" />


        <ImageView
            android:id="@+id/find_candidates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:src="@drawable/find_cand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/campaign_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/find_jobs" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            app:ci_gravity="center"
            app:ci_height="5dp"
            app:ci_margin="5dp"
            app:ci_orientation="horizontal"
            app:ci_width="5dp" />

        <TextView
            android:id="@+id/help_friends_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/help_friends_get_paid"
            android:textColor="@color/primary_green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/campaign_pager"
            app:layout_constraintTop_toBottomOf="@id/campaign_pager" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/people_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/help_friends_text" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:itemIconTint="@color/primary_green"
            app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
            app:itemTextAppearanceInactive="@style/BottomNavigationView"
            app:itemTextColor="@color/primary_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_menu" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>